<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="Message" Id="{ec0e6791-e369-4a98-a9a5-8239f1aa4efc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Message : ST_Message
VAR_INPUT
	eMessage : E_MessageList;
	ePeer : E_PeersList;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Message.eMessage := eMessage;
Message.ePeer := ePeer;]]></ST>
    </Implementation>
    <LineIds Name="Message">
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>